@@ -1,3 +1,7 @@
+2016-01-05	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
+
+	* src/interactive/cinestarov.sh: urls added/corrected
+
 2016-01-04	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
 
 	* src/interactive/cinestarov.sh: Cinestar OV movies in Chemnitz
